Adds working Mars News and Mars Images in notebook

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,6 +2,194 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import requests\n",
+    "import pymongo\n",
+    "from splinter import Browser\n",
+    "from webdriver_manager.chrome import ChromeDriverManager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Current google-chrome version is 88.0.4324\n",
+      "[WDM] - Get LATEST driver version for 88.0.4324\n",
+      "[WDM] - There is no [mac64] chromedriver for browser 88.0.4324 in cache\n",
+      "[WDM] - Get LATEST driver version for 88.0.4324\n",
+      "[WDM] - Trying to download new driver from http://chromedriver.storage.googleapis.com/88.0.4324.96/chromedriver_mac64.zip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Driver has been saved in cache [/Users/alextorres/.wdm/drivers/chromedriver/mac64/88.0.4324.96]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Setup splinter\n",
+    "executable_path= {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NASA Mars News"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit NASA Mars News URL\n",
+    "url = 'https://mars.nasa.gov/news/'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grab HTML with BeautifulSoup\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sensors Prepare to Collect Data as Perseverance Enters Mars' Atmosphere\n",
+      "Technology will collect critical data about the harsh entry environment during Perseverance’s entry next Thursday.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get title and associated paragraph text\n",
+    "news_title = soup.find('ul', class_='item_list').\\\n",
+    "    find('li', class_='slide').\\\n",
+    "    find('div', class_='content_title').a.text\n",
+    "\n",
+    "news_p = soup.find('ul', class_='item_list').\\\n",
+    "    find('li', class_='slide').\\\n",
+    "    find('div', class_='article_teaser_body').text\n",
+    "\n",
+    "print(news_title)\n",
+    "print(news_p)\n",
+    "\n",
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JPL Mars Space Images - Featured Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit JPL Mars Images\n",
+    "url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find and click first search result\n",
+    "search_result = browser.find_by_css('div[id=\"SearchListingPageResults\"] img').first\n",
+    "search_result.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make image full screen\n",
+    "full_screen = browser.find_by_css('button[class=\"BaseButton focus:outline-none text-contrast-none -primary -icon-only xl:text-xl inline-block\"]')\n",
+    "full_screen.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parse HTML\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://d2pn8kiwq2w21t.cloudfront.net/original_images/jpegPIA24405.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Grab original image URL\n",
+    "featured_image_url = soup.find('div', class_='BaseLightbox__slide__img').img['src']\n",
+    "print(featured_image_url)\n",
+    "\n",
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mars Facts"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
