Adds Mars Facts HTML table to notebook

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
     "import requests\n",
     "import pymongo\n",
     "from splinter import Browser\n",
@@ -186,6 +187,41 @@
    "metadata": {},
    "source": [
     "### Mars Facts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://space-facts.com/mars/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tables = pd.read_html(url)\n",
+    "df = tables[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mars_facts_html_table = df.to_html()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mars Hemispheres"
    ]
   },
   {
