Completes working notebok

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -25,9 +25,7 @@
      "text": [
       "[WDM] - Current google-chrome version is 88.0.4324\n",
       "[WDM] - Get LATEST driver version for 88.0.4324\n",
-      "[WDM] - There is no [mac64] chromedriver for browser 88.0.4324 in cache\n",
-      "[WDM] - Get LATEST driver version for 88.0.4324\n",
-      "[WDM] - Trying to download new driver from http://chromedriver.storage.googleapis.com/88.0.4324.96/chromedriver_mac64.zip\n"
+      "[WDM] - Driver [/Users/alextorres/.wdm/drivers/chromedriver/mac64/88.0.4324.96/chromedriver] found in cache\n"
      ]
     },
     {
@@ -35,13 +33,6 @@
      "output_type": "stream",
      "text": [
       " \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - Driver has been saved in cache [/Users/alextorres/.wdm/drivers/chromedriver/mac64/88.0.4324.96]\n"
      ]
     }
    ],
@@ -105,9 +96,7 @@
     "    find('div', class_='article_teaser_body').text\n",
     "\n",
     "print(news_title)\n",
-    "print(news_p)\n",
-    "\n",
-    "browser.quit()"
+    "print(news_p)"
    ]
   },
   {
@@ -177,9 +166,7 @@
    "source": [
     "# Grab original image URL\n",
     "featured_image_url = soup.find('div', class_='BaseLightbox__slide__img').img['src']\n",
-    "print(featured_image_url)\n",
-    "\n",
-    "browser.quit()"
+    "print(featured_image_url)"
    ]
   },
   {
@@ -222,6 +209,73 @@
    "metadata": {},
    "source": [
     "### Mars Hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemisphere_image_urls = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get list of Hemisphere links\n",
+    "image_links = browser.find_by_css('a[class=\"itemLink product-item\"] img')\n",
+    "\n",
+    "# Loop through each link\n",
+    "for i in range(len(image_links)):\n",
+    "    hemisphere_dict = {}\n",
+    "    \n",
+    "    # Click Link\n",
+    "    browser.find_by_css('a[class=\"itemLink product-item\"] img')[i].click()\n",
+    "    \n",
+    "    # Parse HTML\n",
+    "    html = browser.html\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    \n",
+    "    # Grab title and image link for each hemisphere\n",
+    "    hemisphere_dict['title'] = soup.find('h2', class_='title').text\n",
+    "    hemisphere_dict['img_url'] = soup.find('div', class_='downloads').ul.li.a['href']\n",
+    "    \n",
+    "    # Append hemisphere dictionary to list of hemispheres\n",
+    "    hemisphere_image_urls.append(hemisphere_dict)\n",
+    "    browser.back()    \n",
+    "    \n",
+    "print(hemisphere_image_urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
    ]
   },
   {
